--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
     <div class="container">
         <div class="main-content">
+            <p id="title">TODO LIST</p>
             <div class="input_field">
                 <input id="take_input" placeholder="Write a task" />
                 <button id="add_btn" class="input_button" onclick="addItems()">^</button>
@@ -31,7 +32,7 @@
         </div>
     </div>
 
-    <p style="color: red ;"> Note: requirement completed <br> styling uncompleted </p>
+
     <script src="./app.js">
 
     </script>
