--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <!-- font-awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css
     ">
+    <!-- google font -->
+    <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -31,6 +33,8 @@
             </div>
         </div>
     </div>
+
+    <div id="creator">MADE BY ASHAR AHMED</div>
 
 
     <script src="./app.js">
